<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessLeaf">

        <androidx.cardview.widget.CardView
            app:cardElevation="5dp"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <RelativeLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/autour_one"
                    android:text="@string/welcome"
                    android:textColor="@color/navy"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar">


            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/penjualan_item_tanggal_1_3"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/penjualan_fajrin"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvKet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/fajrin_belum_melakukan_penjualan"
                    android:textColor="@color/gray" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/staf_tanpa_transaksi_penjualan"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvEx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/staf_terbanyak_transaksi"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>