<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
    tools:context=".activity.LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:background="@color/navy"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/omega"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/signin_page"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/ic_user"
                        android:backgroundTint="@color/navy"
                        android:contentDescription="@string/todo" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:backgroundTint="@null"
                        android:hint="@string/username"
                        android:textColorHint="@color/gray"
                        app:boxStrokeColor="@null"
                        app:boxStrokeWidth="0dp"
                        app:hintTextColor="@color/gray">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:fontFamily="@font/montserrat"
                            android:inputType="text"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/ic_password"
                        android:backgroundTint="@color/navy"
                        android:contentDescription="@string/todo" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:backgroundTint="@null"
                        android:hint="@string/password"
                        android:textColorHint="@color/gray"
                        app:boxStrokeColor="@null"
                        app:boxStrokeWidth="0dp"
                        app:hintTextColor="@color/gray"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:fontFamily="@font/montserrat"
                            android:inputType="textPassword"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/navy"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/dark_gray"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:textSize="14sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/username_admin"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:textSize="14sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/password_123456789"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>