<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/ivCek"
                android:layout_width="150dp"
                android:layout_height="140dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/ic_info" />

            <TextView
                android:id="@+id/tvKonfirmasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivCek"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/notice"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvTextKonfirmasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvKonfirmasi"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/invalid_credentials"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                android:id="@+id/vKonfirmasi"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="50dp"
                android:background="@color/gray"
                android:padding="-10dp" />

            <Button
                android:id="@+id/btnClose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/navy"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/close"
                android:textColor="@color/white"
                android:theme="@style/Buttons" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>